add back button to modal

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -68,7 +68,7 @@
         margin-left: 5px;
     }
   
-    button {
+    .close-button {
     position: absolute;
     right: -1rem;
     top: -1rem;
