--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,20 +1,20 @@
 .show {
-    display: block;
-  }
-  
-  .hide {
-    display: none;
-  }
-  
-  .overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(48, 49, 48, 0.42);
-    transition: all 1.3s;
-  }
-  
-.wrapper{
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.overlay {
+  background-color: rgba(48, 49, 48, 0.42);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  transition: all 1.3s;
+}
+
+.wrapper {
   display: flex;
   justify-content: space-around;
 
@@ -29,70 +29,74 @@
     transition: transform 0.2s ease;
     box-shadow: 0 2px 8px 3px;
 
-    .header{
+    .header {
       display: flex;
-      flex-direction:column;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       border-bottom: 1px solid #ccc;
       padding: 10px;
     }
-    .body{
+    .body {
       padding: 10px;
-      .space{
+      .space {
         margin-left: 5px;
       }
     }
-    .profile-picture{
+    .profile-picture {
       width: 100px;
       height: 100px;
       border-radius: 100px;
     }
-    .name{
+    .name {
       display: flex;
       min-width: 100%;
       justify-content: center;
     }
-    .age, .height, .weight, .hair{
+    .age,
+    .height,
+    .weight,
+    .hair {
       display: inline-block;
     }
-    .profession, .friend{
+    .profession,
+    .friend {
       margin-top: 20px;
       width: 100%;
     }
-    .modal-label{
+    .modal-label {
       font-weight: bold;
     }
 
-    .modal-value{
-        margin-left: 5px;
+    .modal-value {
+      margin-left: 5px;
     }
-  
+
     .close-button {
-    position: absolute;
-    right: -1rem;
-    top: -1rem;
-    width: 2rem;
-    height: 2rem;
-    padding: 0.5rem;
-    margin: 0 auto;
-    border-radius: 50%;
-    box-shadow: 1px 1px 1px #0000003a;
-    cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.562);
+      position: absolute;
+      right: -1rem;
+      top: -1rem;
+      width: 2rem;
+      height: 2rem;
+      padding: 0.5rem;
+      margin: 0 auto;
+      border-radius: 50%;
+      box-shadow: 1px 1px 1px #0000003a;
+      cursor: pointer;
+      border: 1px solid rgba(0, 0, 0, 0.562);
+    }
   }
 }
-}
 
-  // Large devices (desktops, 992px and up)
+// Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .wrapper{
-      .modal {
-        width: 500px;
-        height: 450px;
-        margin: 50px auto;
-      }
+  .wrapper {
+    .modal {
+      width: 500px;
+      height: 450px;
+      margin: 50px auto;
     }
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
