--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -22,7 +22,7 @@
     width: 300px;
     height: 400px;
     position: fixed;
-    margin: 100px auto;
+    margin: 100px auto 0;
     padding: 10px;
     background-color: #fff;
     border-radius: 2px;
